# learning-python

./: .gitignore  README.md
cheatsheets/: git-cheatsheet.md  ha-api-reference.md  syntax.md
home-cli/: .env.example  .gitignore  README.md  pyproject.toml
home-cli/src/home_cli/: __init__.py  client.py  main.py  models.py
home-cli/src/home_cli/commands/: __init__.py  devices.py  lights.py  scenes.py  sensors.py
home-cli/tests/: test_models.py
week-1/day-1-foundations/: README.md  resources.md  worksheet.md
week-1/day-1-foundations/lab/: lab.md
week-1/day-1-foundations/lab/solution/: solution.py
week-1/day-1-foundations/my-work/: notes.md
week-1/day-2-control-flow/: README.md  resources.md  worksheet.md
week-1/day-2-control-flow/lab/: lab.md
week-1/day-2-control-flow/lab/solution/: solution.py
week-1/day-2-control-flow/my-work/: notes.md
week-1/day-3-data-structures/: README.md  resources.md  worksheet.md
week-1/day-3-data-structures/lab/: lab.md
week-1/day-3-data-structures/lab/solution/: solution.py
week-1/day-3-data-structures/my-work/: notes.md
week-1/day-4-functions/: README.md  resources.md  worksheet.md
week-1/day-4-functions/lab/: lab.md
week-1/day-4-functions/my-work/: notes.md
week-1/day-5-oop/: README.md  resources.md  worksheet.md
week-1/day-5-oop/lab/: lab.md
week-1/day-5-oop/my-work/: notes.md
week-1/day-6-apis/: README.md  resources.md  worksheet.md
week-1/day-6-apis/lab/: lab.md
week-1/day-6-apis/my-work/: notes.md
week-1/day-7-capstone/: README.md
week-1/day-7-capstone/my-work/: notes.md
(+4 files in other folders)
